Fixed CSS width/alignment issues with the #content div.

--- a/site/css/page.css
+++ b/site/css/page.css
@@ -28,9 +28,9 @@ body {
 }
 
 #content {
-	float: left;
+	margin-left: 180px;
 	padding: 1em;
-	width: 60%;
+	width: 50em;
 	color: black;
 	background-color: white;
 	border: 20px solid black;
